// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Loader playground 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "loader--playground",
          "kind": "Loader",
          "name": "playground",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/Loader/Loader.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "playground",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <Loader />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "loader--playground",
        "kind": "Loader",
        "name": "playground",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/Loader/Loader.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "playground",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <Loader>
        <Loaderstyle__LoaderWrapper>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Loaderstyle__LoaderWrapper-sc-1gq6nz9-0",
                  "isStatic": true,
                  "lastClassName": "cqtykQ",
                  "rules": Array [
                    "width:100%;height:100%;display:flex;justify-content:center;align-items:center;",
                  ],
                },
                "displayName": "Loaderstyle__LoaderWrapper",
                "render": [Function],
                "styledComponentId": "Loaderstyle__LoaderWrapper-sc-1gq6nz9-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="Loaderstyle__LoaderWrapper-sc-1gq6nz9-0 cqtykQ"
            >
              <Loaderstyle__LoaderContainer>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Loaderstyle__LoaderContainer-sc-1gq6nz9-1",
                        "isStatic": true,
                        "lastClassName": "kkqVIU",
                        "rules": Array [
                          "display:inline-block;position:relative;width:64px;height:64px;div{position:absolute;width:5px;height:5px;background:",
                          "#8968BA",
                          ";border-radius:50%;animation:",
                          Keyframes {
                            "id": "sc-keyframes-kRtcHe",
                            "inject": [Function],
                            "name": "kRtcHe",
                            "rules": Array [
                              "@-webkit-keyframes kRtcHe{0%,20%,80%,100%{-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1);}50%{-webkit-transform:scale(1.5);-ms-transform:scale(1.5);transform:scale(1.5);}}",
                              "@keyframes kRtcHe{0%,20%,80%,100%{-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1);}50%{-webkit-transform:scale(1.5);-ms-transform:scale(1.5);transform:scale(1.5);}}",
                            ],
                            "toString": [Function],
                          },
                          " 1.2s linear infinite;}div:nth-child(1){animation-delay:0s;top:29px;left:53px;}div:nth-child(2){animation-delay:-0.1s;top:18px;left:50px;}div:nth-child(3){animation-delay:-0.2s;top:9px;left:41px;}div:nth-child(4){animation-delay:-0.3s;top:6px;left:29px;}div:nth-child(5){animation-delay:-0.4s;top:9px;left:18px;}div:nth-child(6){animation-delay:-0.5s;top:18px;left:9px;}div:nth-child(7){animation-delay:-0.6s;top:29px;left:6px;}div:nth-child(8){animation-delay:-0.7s;top:41px;left:9px;}div:nth-child(9){animation-delay:-0.8s;top:50px;left:18px;}div:nth-child(10){animation-delay:-0.9s;top:53px;left:29px;}div:nth-child(11){animation-delay:-1s;top:50px;left:41px;}div:nth-child(12){animation-delay:-1.1s;top:41px;left:50px;}",
                        ],
                      },
                      "displayName": "Loaderstyle__LoaderContainer",
                      "render": [Function],
                      "styledComponentId": "Loaderstyle__LoaderContainer-sc-1gq6nz9-1",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="Loaderstyle__LoaderContainer-sc-1gq6nz9-1 kkqVIU"
                  >
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                  </div>
                </StyledComponent>
              </Loaderstyle__LoaderContainer>
            </div>
          </StyledComponent>
        </Loaderstyle__LoaderWrapper>
      </Loader>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;

exports[`Storyshots Loader with no props 1`] = `
<ReactDecorator
  onMount={[Function]}
  onUnMount={[Function]}
  story={
    <Story
      PropTable={[Function]}
      components={
        Object {
          "a": [Function],
          "code": [Function],
          "h1": [Function],
          "h2": [Function],
          "h3": [Function],
          "h4": [Function],
          "h5": [Function],
          "h6": [Function],
          "li": [Function],
          "p": [Function],
          "ul": [Function],
        }
      }
      context={
        Object {
          "hooks": HooksContext {
            "currentContext": [Circular],
            "currentDecoratorName": null,
            "currentEffects": Array [
              Object {
                "create": [Function],
              },
            ],
            "currentHooks": Array [],
            "currentPhase": "NONE",
            "hasUpdates": false,
            "hookListsMap": WeakMap {},
            "mountedDecorators": Set {
              [Function],
              [Function],
              [Function],
              [Function],
              [Function],
            },
            "nextHookIndex": 0,
            "prevEffects": Array [],
            "prevMountedDecorators": Set {},
            "renderListener": [Function],
          },
          "id": "loader--with-no-props",
          "kind": "Loader",
          "name": "with no props",
          "parameters": Object {
            "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/Loader/Loader.stories.tsx",
            "framework": "react",
            "options": Object {
              "hierarchyRootSeparator": "|",
              "hierarchySeparator": /\\\\/\\|\\\\\\./,
            },
          },
          "story": "with no props",
        }
      }
      excludedPropTypes={Array []}
      info=""
      maxPropArrayLength={3}
      maxPropObjectKeys={3}
      maxPropStringLength={50}
      maxPropsIntoLine={3}
      propTableCompare={[Function]}
      propTables={Array []}
      propTablesExclude={Array []}
      showHeader={true}
      showInline={false}
      showSource={true}
      styles={[Function]}
    >
      <Loader />
    </Story>
  }
>
  <Story
    PropTable={[Function]}
    components={
      Object {
        "a": [Function],
        "code": [Function],
        "h1": [Function],
        "h2": [Function],
        "h3": [Function],
        "h4": [Function],
        "h5": [Function],
        "h6": [Function],
        "li": [Function],
        "p": [Function],
        "ul": [Function],
      }
    }
    context={
      Object {
        "hooks": HooksContext {
          "currentContext": [Circular],
          "currentDecoratorName": null,
          "currentEffects": Array [
            Object {
              "create": [Function],
            },
          ],
          "currentHooks": Array [],
          "currentPhase": "NONE",
          "hasUpdates": false,
          "hookListsMap": WeakMap {},
          "mountedDecorators": Set {
            [Function],
            [Function],
            [Function],
            [Function],
            [Function],
          },
          "nextHookIndex": 0,
          "prevEffects": Array [],
          "prevMountedDecorators": Set {},
          "renderListener": [Function],
        },
        "id": "loader--with-no-props",
        "kind": "Loader",
        "name": "with no props",
        "parameters": Object {
          "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/Loader/Loader.stories.tsx",
          "framework": "react",
          "options": Object {
            "hierarchyRootSeparator": "|",
            "hierarchySeparator": /\\\\/\\|\\\\\\./,
          },
        },
        "story": "with no props",
      }
    }
    excludedPropTypes={Array []}
    info=""
    maxPropArrayLength={3}
    maxPropObjectKeys={3}
    maxPropStringLength={50}
    maxPropsIntoLine={3}
    propTableCompare={[Function]}
    propTables={Array []}
    propTablesExclude={Array []}
    showHeader={true}
    showInline={false}
    showSource={true}
    styles={[Function]}
  >
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <Loader>
        <Loaderstyle__LoaderWrapper>
          <StyledComponent
            forwardedClass={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "Loaderstyle__LoaderWrapper-sc-1gq6nz9-0",
                  "isStatic": true,
                  "lastClassName": "cqtykQ",
                  "rules": Array [
                    "width:100%;height:100%;display:flex;justify-content:center;align-items:center;",
                  ],
                },
                "displayName": "Loaderstyle__LoaderWrapper",
                "render": [Function],
                "styledComponentId": "Loaderstyle__LoaderWrapper-sc-1gq6nz9-0",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="Loaderstyle__LoaderWrapper-sc-1gq6nz9-0 cqtykQ"
            >
              <Loaderstyle__LoaderContainer>
                <StyledComponent
                  forwardedClass={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "Loaderstyle__LoaderContainer-sc-1gq6nz9-1",
                        "isStatic": true,
                        "lastClassName": "kkqVIU",
                        "rules": Array [
                          "display:inline-block;position:relative;width:64px;height:64px;div{position:absolute;width:5px;height:5px;background:",
                          "#8968BA",
                          ";border-radius:50%;animation:",
                          Keyframes {
                            "id": "sc-keyframes-kRtcHe",
                            "inject": [Function],
                            "name": "kRtcHe",
                            "rules": Array [
                              "@-webkit-keyframes kRtcHe{0%,20%,80%,100%{-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1);}50%{-webkit-transform:scale(1.5);-ms-transform:scale(1.5);transform:scale(1.5);}}",
                              "@keyframes kRtcHe{0%,20%,80%,100%{-webkit-transform:scale(1);-ms-transform:scale(1);transform:scale(1);}50%{-webkit-transform:scale(1.5);-ms-transform:scale(1.5);transform:scale(1.5);}}",
                            ],
                            "toString": [Function],
                          },
                          " 1.2s linear infinite;}div:nth-child(1){animation-delay:0s;top:29px;left:53px;}div:nth-child(2){animation-delay:-0.1s;top:18px;left:50px;}div:nth-child(3){animation-delay:-0.2s;top:9px;left:41px;}div:nth-child(4){animation-delay:-0.3s;top:6px;left:29px;}div:nth-child(5){animation-delay:-0.4s;top:9px;left:18px;}div:nth-child(6){animation-delay:-0.5s;top:18px;left:9px;}div:nth-child(7){animation-delay:-0.6s;top:29px;left:6px;}div:nth-child(8){animation-delay:-0.7s;top:41px;left:9px;}div:nth-child(9){animation-delay:-0.8s;top:50px;left:18px;}div:nth-child(10){animation-delay:-0.9s;top:53px;left:29px;}div:nth-child(11){animation-delay:-1s;top:50px;left:41px;}div:nth-child(12){animation-delay:-1.1s;top:41px;left:50px;}",
                        ],
                      },
                      "displayName": "Loaderstyle__LoaderContainer",
                      "render": [Function],
                      "styledComponentId": "Loaderstyle__LoaderContainer-sc-1gq6nz9-1",
                      "target": "div",
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <div
                    className="Loaderstyle__LoaderContainer-sc-1gq6nz9-1 kkqVIU"
                  >
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                    <div />
                  </div>
                </StyledComponent>
              </Loaderstyle__LoaderContainer>
            </div>
          </StyledComponent>
        </Loaderstyle__LoaderWrapper>
      </Loader>
    </div>
    <button
      className="info__show-button"
      onClick={[Function]}
      style={
        Object {
          "background": "#027ac5",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
  </Story>
</ReactDecorator>
`;
